Fix toolbar overlap

--- a/css/persistent.css
+++ b/css/persistent.css
@@ -19,6 +19,7 @@ img.logo {
 nav {
     display: flex;
     width: 100%;
+    height: 50px;
     justify-content: center;
     align-items: center;
     position: sticky;
@@ -32,9 +33,10 @@ ul {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 75%;
+    width: 95%;
     margin: 0;
     padding: 0;
+    height: 100%;
 }
 
 li {
@@ -42,14 +44,14 @@ li {
 }
   
 li a {
-    display: block;
     font-weight: bold;
     color: black;
     text-align: center;
-    padding: 8px 20px;
+    padding: 17px 10px;
     margin: 0px;
     text-decoration: none;
-    width: auto;
+    width: 200px;
+    height: 100%;
 }
   
 li a:hover {
